--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.6",
