--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-svg": "^15.1.0"
